2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-save-calendar.eplug.in: Fixed description and added
	author. 
	Shortened name of plugin.
	Added xml tag.

2005-02-21  Rodrigo Moya <rodrigo@novell.com>

	Fixes #71527

	* ical-format.c (display_error_message): changed to get a simple
	string instead of a GError.
	(do_save_calendar_ical): use GNOME-VFS for saving the file.

2005-01-05  JP Rosevear  <jpr@novell.com>

	* save-calendar.c (ask_destination_and_save): fix build for non
	gtk file chooser case

2005-01-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* csv-format.c, rdf-format.c: Use standard error messages

2004-12-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* csv-format.c, rdf-format.c: Warning when overwriting file

2004-12-22  JP Rosevear  <jpr@novell.com>

	* Makefile.am: list format-handler.h as a source so it dists

2004-12-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Makefile.am: Code splitup, each format has it's own c-file
	* csv-format.c: Added. Code splitup
	* format-handler.h: Added. Code splitup
	* ical-format.c: Added. Code splitup
	* rdf-format.c: Added. Support for RDF files. Code splitup
 	* save-calendar.c: Support for RDF files. Code splitup

2004-11-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* save-calendar.c: Support for CSV files

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplug.in file

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* save-calendar.c (do_save_calendar): get error information in
	e_cal_* calls, and display errors to the user.

2004-10-21  JP Rosevear  <jpr@novell.com>

	* save-calendar.c (do_save_calendar): compile if not using file
	chooser

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-save-calendar.eplug.in: better menu items.

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* save-calendar.c: new plugin for saving a calendar to disk.